# word-MCP-agent

./: .gitignore  README.md
backend/: README.md  agents.py  main.py  mcpconfig.json  memory.py  pyproject.toml  server.py  start.sh
backend/wordMCP-complicated/: .gitignore  CHANGELOG.md  MIGRATION.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_NEW.md  config.py  example_usage.md  main.py  main_new.py  pyproject.toml  run.sh  run_new.sh  verify_installation.py
backend/wordMCP-complicated/core/: __init__.py  document.py  exceptions.py  logger.py  path_utils.py
backend/wordMCP-complicated/tests/: README.md  __init__.py  conftest.py  test_document.py  test_path_utils.py
backend/wordMCP-complicated/tools/: __init__.py  advanced.py  crud.py  formatting.py
backend/wordmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: README.md  __entry.tsx  index.html  index.tsx  package-lock.json  package.json  tsconfig.json
